compiler/test-data/parser/blueprint/errors/missing_blueprint_name.frel
module test

blueprint {
    text { "Hello" }
}
